--- a/src/components/testimonials/Testimonials.module.css
+++ b/src/components/testimonials/Testimonials.module.css
@@ -1,9 +1,9 @@
 .testimonials {
+  padding: 2.5rem 1rem 2rem 1rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 5rem 2rem;
 }
 
 .wrapper {
